# iotprovision

./: CHANGELOG.md  HOWTO_BUILD_EXE.txt  MANIFEST.in  README.md  iotprovision-bin.py  pylintrc  pypi.md  pyproject.toml  requirements.txt  setup.py
doc/source/: conf.py  iotprovision.azure.rst  iotprovision.cellular.rst  iotprovision.rst
docs/: .buildinfo  genindex.html  index.html  iotprovision.aws.html  iotprovision.azure.html  iotprovision.cellular.html  iotprovision.html  iotprovision.winc.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  iotprovision.aws.rst.txt  iotprovision.winc.rst.txt
iotprovision/: iotprovision.md
iotprovision/tests/: readme.md  test_iotprovision_cli.py
iotprovision/tests/data/winc_ref_client_certs/: device.crt  signer.crt
iotprovision/tests/data/winc_ref_root_certs_ecc/: ca_cert.pem.cer
