[build-system]
# project table in pyproject.toml was added in setuptools 61.0.0
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iotprovision"
authors = [
    {name = "Microchip Technology", email = "support@microchip.com"}
]
description = "Collection of tools for cloud provisioning of Microchip IoT kits"
license = {text = "MIT"}
keywords = ["Microchip", "AWS", "AVR-IOT", "PIC-IOT", "SAM-IOT"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    # External packages
    "pytz",
    "cryptography",
    "pyOpenSSL",
    "packaging>=20.0",
    "pyyaml",
    "appdirs",

    # Microchip packages
    "pyedbglib>=2.22",
    "pymcuprog>=3.7",
    "pydebuggerupgrade>=3.4",
    "pykitcommander>=2.7.7",
    "pytrustplatform>=0.15",
    "pyawsutils>=1.2",
    "pyazureutils>=0.8",
    "pydebuggerconfig>=3.8.3",
    "pysequansutils>=2.3.0"
]

dynamic = ["readme", "version"]

[tool.setuptools.dynamic]
readme = {file = ["pypi.md", "CHANGELOG.md"], content-type = "text/markdown"}
version = {attr = "iotprovision.__version__"}

[project.urls]
"Homepage" = "https://github.com/microchip-pic-avr-tools/iotprovision"

[project.optional-dependencies]
dev = ["pylint>=2.15"]
test = ["mock", "pytest"]
doc = [
    # To avoid missing modules when generating documentation the mock module used by the tests is needed.
    # The mock module could also be useful if some imports need to be mocked out when generating documentation.
    "mock",
    "sphinx"
]

[project.scripts]
iotprovision = "iotprovision.iotprovision:main"
pywinc = "iotprovision.winc.pywinc:main"

[tool.setuptools.packages.find]
exclude = ["iotprovision.tests*", "doc*", "fw*"]

[tool.setuptools.package-data]
iotprovision = ["logging.yaml", "fw/*.hex", "fw/*.zip", "fw/winc/*.bin"]

